--- a/docs/style.css
+++ b/docs/style.css
@@ -260,6 +260,16 @@ header {
     border-bottom: 2px solid #1e293b;
     margin-bottom: 40px;
     padding-bottom: 20px;
+    text-align: center;
+}
+
+.index-logo {
+    height: 80px;
+    width: auto;
+    margin-bottom: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .subtitle {
