Fixed paper margins

--- a/docs/papers.css
+++ b/docs/papers.css
@@ -71,8 +71,7 @@ article h3 {
 /* Body text */
 article p {
     margin: 1.2em 0;
-    text-align: justify;
-    hyphens: auto;
+    text-align: left;
 }
 
 /* Abstract styling */
